@@ -139,16 +139,6 @@
 				</executions>
 			</plugin>
 
-			<!--<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>
-						-XX:+EnableDynamicAgentLoading
-						-Djdk.instrument.traceUsage=true
-					</argLine>
-				</configuration>
-			</plugin>-->
 			<plugin>
 				<groupId>org.sonarsource.scanner.maven</groupId>
 				<artifactId>sonar-maven-plugin</artifactId>
